<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/poster"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/avengers"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="Poster" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingHorizontal="20dp"
        android:paddingVertical="30dp"
        android:background="@drawable/gradient">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avengers_endgame"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/drama_fantasy_scyfy"/>
        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/genre"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/descmov"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/ket1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/desc"
            app:cardCornerRadius="10dp"
            android:layout_marginVertical="16dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:padding="8dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/_16"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="+"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/ket2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/ket1"
            app:layout_constraintTop_toBottomOf="@id/desc"
            app:cardCornerRadius="10dp"
            android:layout_marginVertical="16dp"
            android:layout_marginLeft="10dp">
            <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textStyle="bold"
                android:text="2016"/>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/ket3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/ket2"
            app:layout_constraintTop_toBottomOf="@id/desc"
            app:cardCornerRadius="10dp"
            android:layout_marginVertical="16dp"
            android:layout_marginLeft="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:padding="8dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:src="@drawable/baseline_star_half_24"/>
                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="4.3"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/ket4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/ket3"
            app:layout_constraintTop_toBottomOf="@id/desc"
            app:cardCornerRadius="10dp"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:padding="8dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:src="@drawable/baseline_access_time_24"/>
                <TextView
                    android:id="@+id/duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="120"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/min"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <Button
            android:id="@+id/buttonPurchase"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/ket1"
            android:layout_height="55dp"
            android:text="@string/pesan_tiket"
            app:cornerRadius="60dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>