<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/login_welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/logo"
                android:text="@string/daftar_akun"
                android:textColor="@color/black"
                android:textSize="28sp"/>

            <TextView
                android:id="@+id/login_desc_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_welcome_text"
                android:layout_centerInParent="true"
                android:layout_marginVertical="10dp"
                android:text="@string/pesan_tiket_dekat_dan_mudah_dengan_sekali_klik"
                android:textAlignment="center"
                android:textSize="16sp" />

            <RelativeLayout
                android:id="@+id/username_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_desc_text"
                >
                <TextView
                    android:id="@+id/username_log_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/username"
                    android:layout_alignParentStart="true"
                    android:textSize="16sp"
                    android:layout_marginVertical="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"

                    />
                <EditText
                    android:id="@+id/usernameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:autofillHints="emailAddress"
                    android:layout_below="@+id/username_log_label"
                    android:background="@drawable/input"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    tools:ignore="LabelFor" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/email_layout"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username_layout"
                >
                <TextView
                    android:id="@+id/email_log_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="Email"
                    android:layout_alignParentStart="true"
                    android:textSize="16sp"
                    android:layout_marginVertical="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"

                    />
                <EditText
                    android:id="@+id/emailField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:autofillHints="emailAddress"
                    android:layout_below="@+id/email_log_label"
                    android:background="@drawable/input"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    tools:ignore="LabelFor" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_layout"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:id="@+id/password_log_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/password"
                    android:layout_alignParentStart="true"
                    android:textSize="16sp"
                    android:layout_marginVertical="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    />
                <EditText
                    android:id="@+id/passwordField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:autofillHints="emailAddress"
                    android:layout_below="@+id/password_log_label"
                    android:background="@drawable/input"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    tools:ignore="LabelFor" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/confirm_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password_layout"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:id="@+id/confirm_log_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="Konfirmasi Password"
                    android:layout_alignParentStart="true"
                    android:textSize="16sp"
                    android:layout_marginVertical="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    />
                <EditText
                    android:id="@+id/confirmField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:autofillHints="emailAddress"
                    android:layout_below="@+id/confirm_log_label"
                    android:background="@drawable/input"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    tools:ignore="LabelFor" />
            </RelativeLayout>

            <Button
                android:id="@+id/button_log"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/confirm_layout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/daftar"
                app:cornerRadius="60dp"
                />

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>